# undep

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/undep/: action.yml
.github/workflows/: publish.yml  python-package-hygiene.yml
src/undep/cli/: main.py
src/undep/config/: loader.py
src/undep/core/: monitor.py  updater.py
tests/: test_undep.py
