[tool.poetry]
name = "undep"
version = "0.1.0"
description = "Indirect dependency management system"
authors = ["Akshit Tyagi <tyagiakshit833@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/exitflynn/undep"
repository = "https://github.com/exitflynn/undep"
documentation = "https://github.com/exitflynn/undep#readme"
keywords = ["dependency", "management", "github", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "undep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
pydantic = "^2.0"
rich = "^13.0.0"
requests = "^2.31.0"
requests_mock = "^1.11.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
undep = "undep.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"